bad/new_array_invalid_size_type_class.example_compiler_output
ERROR
[1mbad/new_array_invalid_size_type_class.lat:4:20: [1;31merror: [0;1marray size has to be of type `int`, not `X`[m
	int[] x = new int[new X];
	                  [1;32m^[m
